修改了小细节

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
 <body>
 <div>
     <label>评论:</label>
-    <input id="inputcommon" type="text" ng-model="yourName" placeholder="Enter a name here">
+    <input id="inputcommon" type="text" name="comment" ng-model="yourName" placeholder="Enter a name here">
     <button id="po">提交</button>
     <hr>
     <h1>Hello {{yourName}}!</h1>
