--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,8 @@
     <button id="po">提交</button>
     <hr>
     <h1>Hello {{yourName}}!</h1>
-    <div id="common">
+    <hr>
+    <div id="comment">
     
     </div>
 </div>
