--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <div id="app">
+    <div><p>今日热点：</p>
+        <div id="hot"></div>
+    </div>
     <label>评论:</label>
     <input id="inputcommon" type="text" v-model="message" name="comment" placeholder="input your message">
     <button id="po">提交</button>
@@ -25,7 +28,6 @@
 <!--该文件放在上面还没能加载页面元素-->
 <script src="js/index.js"></script>
 <script>
-
 
 </script>
 </html>
