增加了反向ajax功能

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,9 @@
     <div><p>今日热点：</p>
         <div id="hot"></div>
     </div>
+    <div><p>长连接：</p>
+        <div id="longPolling"></div>
+    </div>
     <label>评论:</label>
     <input id="inputcommon" type="text" v-model="message" name="comment" placeholder="input your message">
     <button id="po">提交</button>
