--- a/src/main/resources/static/html/album.html
+++ b/src/main/resources/static/html/album.html
@@ -24,21 +24,21 @@
       </a>
     </h1>
     <div class="nav">
-      <a href="index.html">文章</a>
-      <a href="whisper.html">微语</a>
+      <a href="index.html">首页</a>
+      <a href="whisper.html">ins</a>
       <a href="leacots.html">留言</a>
       <a href="album.html"  class="active">相册</a>
       <a href="about.html">关于</a>
     </div>
     <ul class="layui-nav header-down-nav">
-      <li class="layui-nav-item"><a href="index.html">文章</a></li>
-      <li class="layui-nav-item"><a href="whisper.html">微语</a></li>
+      <li class="layui-nav-item"><a href="index.html">首页</a></li>
+      <li class="layui-nav-item"><a href="whisper.html">ins</a></li>
       <li class="layui-nav-item"><a href="leacots.html">留言</a></li>
       <li class="layui-nav-item"><a href="album.html"  class="active">相册</a></li>
       <li class="layui-nav-item"><a href="about.html">关于</a></li>
     </ul>
     <p class="welcome-text">
-      欢迎来到<span class="name">小明</span>的博客~
+      欢迎<span class="name">mike</span>的个人网站~
     </p>
   </div>
 
