--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -9,10 +9,12 @@
   <link rel="stylesheet" type="text/css" href="../res/layui/css/layui.css">
   <link rel="stylesheet" type="text/css" href="../res/css/main.css">
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
 <!--加载meta IE兼容文件-->
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+
 <![endif]-->
 </head>
 <body>
@@ -22,23 +24,23 @@
     </div>
     <h1 class="logo">
       <a href="index.html">
-        <span>mike</span>
+        <span>MYWEB</span>
         <img src="../res/img/logo.png">
       </a>
     </h1>
     <div class="nav">
-      <a href="index.html" class="active">首页</a>
-      <a href="whisper.html">ins</a>
-      <a href="leacots.html">留言</a>
-      <a href="album.html">相册</a>
-      <a href="about.html">关于</a>
+      <a href="/html/index.html" class="active">首页</a>
+      <a href="/html/whisper.html">ins</a>
+      <a href="/html/leacots.html">留言</a>
+      <a href="/html/album.html">相册</a>
+      <a href="/html/about.html">关于</a>
     </div>
     <ul class="layui-nav header-down-nav">
-      <li class="layui-nav-item"><a href="index.html" class="active">首页</a></li>
-      <li class="layui-nav-item"><a href="whisper.html">ins</a></li>
-      <li class="layui-nav-item"><a href="leacots.html">留言</a></li>
-      <li class="layui-nav-item"><a href="album.html">相册</a></li>
-      <li class="layui-nav-item"><a href="about.html">关于</a></li>
+      <li class="layui-nav-item"><a href="/html/index.html" class="active">首页</a></li>
+      <li class="layui-nav-item"><a href="/html/whisper.html">ins</a></li>
+      <li class="layui-nav-item"><a href="/html/leacots.html">留言</a></li>
+      <li class="layui-nav-item"><a href="/html/album.html">相册</a></li>
+      <li class="layui-nav-item"><a href="/html/about.html">关于</a></li>
     </ul>
     <p class="welcome-text">
       欢迎<span class="name">mike</span>的个人网站~
@@ -48,27 +50,18 @@
   <div class="banner">
     <div class="cont w1000">
       <div class="title">
-        <h3>MY<br />BLOG</h3>
+        <h3>MY<br />WEB</h3>
         <h4>well-balanced heart</h4>
       </div>
-      <div class="amount">
-        <p><span class="text">访问量</span><span class="access">1000</span></p>
-        <p><span class="text">日志</span><span class="daily-record">1000</span></p>
+      <div class="amount" id="app">
+        <p><span class="text">访问量</span><span class="access">{{ count }}</span></p>
       </div>
     </div>
   </div>
 
   <div class="content">
     <div class="cont w1000">
-      <div class="title">
-        <span class="layui-breadcrumb" lay-separator="|">
-          <a href="javascript:;" class="active">设计文章</a>
-          <a href="javascript:;">前端文章</a>
-          <a href="javascript:;">旅游杂记</a>
-        </span>
-      </div>
       <div class="list-item" id="article-item">
-
         <div class="item">
           <div class="layui-fluid">
             <div class="layui-row">
@@ -102,9 +95,9 @@
         <img src="../res/img/down_img.jpg">
         <div class="text">
           <h4 class="title">我的联系方式</h4>
-          <p>微信<span class="WeChat">1234567890</span></p>
-          <p>手机<span class="iphone">1234567890</span></p>
-          <p>邮箱<span class="email">1234567890@qq.com</span></p>
+          <p>微信<span class="WeChat">13283456963</span></p>
+          <p>手机<span class="iphone">13283456963</span></p>
+          <p>邮箱<span class="email">690219179@qq.com</span></p>
         </div>
       </div>
     </div>
@@ -182,6 +175,44 @@ id: 9707360
       });
     }
     showZhihu();
+    /*--------显示访问人数------------------------------------------------------------------------------------------------------------------*/
+    function showVisitors() {
+
+      var url = "../visitor";
+      $.ajax({
+        "url": url,
+        "type": "post",
+        "dataType": "json",
+        /*"processData": false,*/
+        "success": function (json) {
+          if (json.status == 200) {
+            var visitors = json.data;
+            new Vue({
+              el: '#app',
+              data: {
+                count: visitors
+              }
+            })
+          } else if (json.status == 402) {
+            alert("修改失败！" + json.message);
+          } else {
+            alert("莫名其妙！！！");
+          }
+        },
+        "error": function (xhr, textStatus, errorThrown) {
+          // xhr：XMLHttpRequest类型的对象
+          // - responseText：响应的文本
+          // - readyState：状态，值为0~4
+          // - status：响应码
+          console.log("状态码：" + xhr.readyState);
+          console.log("响应码：" + xhr.status);
+          console.log("响应文本：" + xhr.responseText);
+          console.log("textStatus=" + textStatus);
+          console.log("errorThrown=" + errorThrown);
+        }
+      });
+    }
+    showVisitors();
   </script>
 
 </body>
