--- a/src/main/resources/static/html/leacots.html
+++ b/src/main/resources/static/html/leacots.html
@@ -1,181 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="../res/layui/css/layui.css">
-  <link rel="stylesheet" type="text/css" href="../res/css/main.css">
-  <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-<!--加载meta IE兼容文件-->
-<!--[if lt IE 9]>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="../res/layui/css/layui.css">
+    <link rel="stylesheet" type="text/css" href="../res/css/main.css">
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <!--加载meta IE兼容文件-->
+    <!--[if lt IE 9]>
 
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-<![endif]-->
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-  <div class="header">
+<div class="header">
     <div class="menu-btn">
-      <div class="menu"></div>
+        <div class="menu"></div>
     </div>
     <h1 class="logo">
-      <a href="index.html">
-        <span>MYWEB</span>
-        <img src="../res/img/logo.png">
-      </a>
+        <a href="index.html">
+            <span>MYWEB</span>
+            <img src="../res/img/logo.png">
+        </a>
     </h1>
     <div class="nav">
-      <a href="/html/index.html">首页</a>
-      <a href="/html/whisper.html">ins</a>
-      <a href="/html/leacots.html" class="active">留言</a>
-      <a href="/html/album.html">相册</a>
-      <a href="/html/about.html">关于</a>
+        <a href="/html/index.html">首页</a>
+        <a href="/html/whisper.html">ins</a>
+        <a href="/html/leacots.html" class="active">留言</a>
+        <a href="/html/album.html">相册</a>
+        <a href="/html/about.html">关于</a>
     </div>
     <ul class="layui-nav header-down-nav">
-      <li class="layui-nav-item"><a href="/html/index.html">首页</a></li>
-      <li class="layui-nav-item"><a href="/html/whisper.html">ins</a></li>
-      <li class="layui-nav-item"><a href="/html/leacots.html"  class="active">留言</a></li>
-      <li class="layui-nav-item"><a href="/html/album.html">相册</a></li>
-      <li class="layui-nav-item"><a href="/html/about.html">关于</a></li>
+        <li class="layui-nav-item"><a href="/html/index.html">首页</a></li>
+        <li class="layui-nav-item"><a href="/html/whisper.html">ins</a></li>
+        <li class="layui-nav-item"><a href="/html/leacots.html" class="active">留言</a></li>
+        <li class="layui-nav-item"><a href="/html/album.html">相册</a></li>
+        <li class="layui-nav-item"><a href="/html/about.html">关于</a></li>
     </ul>
     <p class="welcome-text">
-      欢迎<span class="name">mike</span>的个人网站~
+        欢迎<span class="name">mike</span>的个人网站~
     </p>
-  </div>
+</div>
 
 
-  <div class="content whisper-content leacots-content">
+<div class="content whisper-content leacots-content">
     <div class="cont w1000">
-      <div class="whisper-list">
-        <div class="item-box">
-          <div class="review-version">
-              <div class="form-box">
-                <img class="banner-img" src="../res/img/liuyan.jpg">
-                <div class="form">
-                  <form class="layui-form" action="">
-                    <div class="layui-form-item layui-form-text">
-                      <div class="layui-input-block">
-                        <textarea name="desc" placeholder="既然来了，就说几句" class="layui-textarea" id="inputcommon"></textarea>
-                      </div>
+        <div class="whisper-list">
+            <div class="item-box">
+                <div class="review-version">
+                    <div class="form-box">
+                        <img class="banner-img" src="../res/img/liuyan.jpg">
+                        <div class="form">
+                            <form class="layui-form" action="">
+                                <div class="layui-form-item layui-form-text">
+
+                                    <div class="layui-form-item">
+                                        <label class="layui-form-label"style="padding: 10px 5px 10px 0px;width: 44px;">用户名</label>
+                                        <div class="layui-input-inline">
+                                            <input type="text" name="username"  required lay-verify="username"  placeholder="请输入" autocomplete="off" class="layui-input" id="username">
+                                        </div>
+                                    </div>
+
+                                    <div class="layui-form-item">
+                                        <textarea name="desc" placeholder="既然来了，就说几句" class="layui-textarea" id="inputcommon"></textarea>
+                                    </div>
+
+                                </div>
+                                <div class="layui-form-item">
+                                    <div class="layui-input-block" style="text-align: right;">
+                                        <button class="layui-btn" lay-submit lay-filter="formDemo" id="po">提交</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-                    <div class="layui-form-item">
-                      <div class="layui-input-block" style="text-align: right;">
-                        <button class="layui-btn definite" id="po">確定</button>
-                      </div>
+                    <div class="volume">
+                        全部留言 <span></span>
                     </div>
-                  </form>
+                    <div class="list-cont" id="list-comment">
+
+
+                    </div>
                 </div>
-              </div>
-              <div class="volume">
-                全部留言 <span></span>
-              </div>
-              <div class="list-cont" id="list-comment">
-
-
-
-              </div>
-          </div>
+            </div>
         </div>
-      </div>
-      <div id="demo" style="text-align: center;"></div>
+        <div id="demo" style="text-align: center;"></div>
     </div>
-  </div>
-  <script type="text/javascript" src="../res/layui/layui.js"></script>
-  <script type="text/javascript">
+</div>
+<script type="text/javascript" src="../res/layui/layui.js"></script>
+<script type="text/javascript">
     layui.config({
-      base: '../res/js/util/'
-    }).use(['element','laypage','jquery','menu'],function(){
-      element = layui.element,laypage = layui.laypage,$ = layui.$,menu = layui.menu;
-      laypage.render({
-        elem: 'demo'
-        ,count: 70 //数据总数，从服务端得到
-      });
-      menu.init();
+        base: '../res/js/util/'
+    }).use(['element', 'laypage', 'jquery', 'menu'], function () {
+        element = layui.element, laypage = layui.laypage, $ = layui.$, menu = layui.menu;
+        laypage.render({
+            elem: 'demo'
+            , count: 70 //数据总数，从服务端得到
+        });
+        menu.init();
     })
-  </script>
-  <script type="text/javascript">
+</script>
+<script type="text/javascript">
     /*--------显示评论------------------------------------------------------------------------------------------------------------------*/
     function showComment() {
-      /*Resource interpreted as Document but transferred with MIME type application/json*/
-      var url = "../comment/show";
-      $.ajax({
-        "url": url,
-        "type": "post",
-        "dataType": "json",
-        /*"processData": false,*/
-        "success": function(json) {
-          console.log("json.status="+json.status);
-          if (json.status == 200) {
-            var data=json.data;
-            $("#comment").empty();
-            var html="";
-            for (var i = 0; i < data.length; i++) {
-              var element = data[i];
-              var name=element.uid;
-              var com=element.comment;
-              //var time=element.createTime;
-              var time=renderTime(element.createTime);
-              var temp= '<div class="cont"><div class="img"> <img src="../res/img/header.png" alt=""> </div> <div class="text"> <p class="tit">'
-                     +'<span class="name">用户名：'+name+'</span><span class="data">'+time+'</span></p> <p class="ct">'
-                     +com+'</p></div></div>';
-              html=html+temp;
+        /*Resource interpreted as Document but transferred with MIME type application/json*/
+        var url = "../comment/show";
+        $.ajax({
+            "url": url,
+            "type": "post",
+            "dataType": "json",
+            /*"processData": false,*/
+            "success": function (json) {
+                console.log("json.status=" + json.status);
+                if (json.status == 200) {
+                    var data = json.data;
+                    $("#comment").empty();
+                    var html = "";
+                    for (var i = 0; i < data.length; i++) {
+                        var element = data[i];
+                        var name = element.username;
+                        var com = element.comment;
+                        //var time=element.createTime;
+                        var time = renderTime(element.createTime);
+                        var temp = '<div class="cont"><div class="img"> <img src="../res/img/header.png" alt=""> </div> <div class="text"> <p class="tit">'
+                            + '<span class="name">用户名：' + name + '</span><span class="data">' + time + '</span></p> <p class="ct">'
+                            + com + '</p></div></div>';
+                        html = html + temp;
+                    }
+                    $("#list-comment").append(html);
+                } else if (json.status == 402) {
+                    alert("修改失败！" + json.message);
+                } else {
+                    alert("莫名其妙！！！");
+                }
+            },
+            "error": function (xhr, textStatus, errorThrown) {
+                // xhr：XMLHttpRequest类型的对象
+                // - responseText：响应的文本
+                // - readyState：状态，值为0~4
+                // - status：响应码
+                console.log("状态码：" + xhr.readyState);
+                console.log("响应码：" + xhr.status);
+                console.log("响应文本：" + xhr.responseText);
+                console.log("textStatus=" + textStatus);
+                console.log("errorThrown=" + errorThrown);
             }
-            $("#list-comment").append(html);
-          } else if (json.status == 402) {
-            alert("修改失败！" + json.message);
-          }else {
-            alert("莫名其妙！！！");
-          }
-        },
-        "error": function(xhr, textStatus, errorThrown) {
-          // xhr：XMLHttpRequest类型的对象
-          // - responseText：响应的文本
-          // - readyState：状态，值为0~4
-          // - status：响应码
-          console.log("状态码：" + xhr.readyState);
-          console.log("响应码：" + xhr.status);
-          console.log("响应文本：" + xhr.responseText);
-          console.log("textStatus=" + textStatus);
-          console.log("errorThrown=" + errorThrown);
-        }
-      });
+        });
 
 
     }
+
     showComment();
     /*--点击提交事件------------------------------------------------------------------------------------------------------------------------*/
-    $('#po').click(function(){
-      var url = "../comment/post";
-      var _comment =$("#inputcommon").val();
-      var _uid=3;
-      var data={comment:_comment,uid:_uid};
-      $.ajax({
-        "url": url,
-        "data": data,
-        "type": "post",
-        "dataType": "json",
-        "contentType": "application/x-www-form-urlencoded; charset=utf-8",
-        /*"processData": false,*/
-        "success": function(json) {
-          alert(json.status);
-          if (json.status == 200) {
-            alert("添加成功！"+json.data);
-            showComment();
-          } else if (json.status == 402) {
-            alert("修改失败！" + json.message);
-          }else {
-            alert("莫名其妙！！！");
-          }
-        }
-      });
+    var a=0;
+
+    $('#po').click(function () {
+
+
+        if (a=1)return;
+
+        var url = "../comment/post";
+        var _comment = $("#inputcommon").val();
+        var _uid = $("#username").val();
+        var data = {comment: _comment, uid: _uid};
+        $.ajax({
+            "url": url,
+            "data": data,
+            "type": "post",
+            "dataType": "json",
+            "contentType": "application/x-www-form-urlencoded; charset=utf-8",
+            /*"processData": false,*/
+            "success": function (json) {
+                alert(json.status);
+                if (json.status == 200) {
+                    alert("添加成功！" + json.data);
+                    showComment();
+                } else if (json.status == 402) {
+                    alert("修改失败！" + json.message);
+                } else {
+                    alert("莫名其妙！！！");
+                }
+            }
+        });
     });
 
     function renderTime(date) {
-      var dateee = new Date(date).toJSON();
-      return new Date(+new Date(dateee) + 8 * 3600 * 1000).toISOString().replace(/T/g, ' ').replace(/\.[\d]{3}Z/, '')
+        var dateee = new Date(date).toJSON();
+        return new Date(+new Date(dateee) + 8 * 3600 * 1000).toISOString().replace(/T/g, ' ').replace(/\.[\d]{3}Z/, '')
     }
+    /*--点击提交事件------------------------------------------------------------------------------------------------------------------------*/
 
-  </script>
+    layui.use('form', function () {
+        var form=layui.form;
+        form.verify({
+
+            username: function(value){
+
+                if(value.length<5){
+                    a = 1;
+                    return 'too short';
+                }
+
+                if(!new RegExp("^[a-zA-Z0-9_\u4e00-\u9fa5\\s·]+$").test(value)){
+                    console.log("in");
+                    a = 1;
+                    return '用户名不能有特殊字符';
+                }
+                if(/(^\_)|(\__)|(\_+$)/.test(value)){
+                    console.log("in");
+                    a = 1;
+                    return '用户名首尾不能出现下划线\'_\'';
+                }
+                if(/^\d+\d+\d$/.test(value)){
+                    console.log("in");
+                    a = 1;
+                    return '用户名不能全为数字';
+                }
+
+            }
+        });
+
+    });
+</script>
+
 </body>
 </html>
