--- a/src/main/resources/static/html/leacots.html
+++ b/src/main/resources/static/html/leacots.html
@@ -5,14 +5,12 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../res/layui/css/layui.css">
     <link rel="stylesheet" type="text/css" href="../res/css/main.css">
-    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="../res/layui/css/layui.css"/>
+    <script src="../res/layui/layui.all.js"></script>
+    <script src="../res/layui/lay/modules/jquery.js"></script>
     <!--加载meta IE兼容文件-->
     <!--[if lt IE 9]>
-
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 </head>
 <body>
@@ -60,7 +58,7 @@
                                     <div class="layui-form-item">
                                         <label class="layui-form-label"style="padding: 10px 5px 10px 0px;width: 44px;">用户名</label>
                                         <div class="layui-input-inline">
-                                            <input type="text" name="username"  required lay-verify="username"  placeholder="请输入" autocomplete="off" class="layui-input" id="username">
+                                            <input type="text" name="username"  lay-verify="username"  placeholder="请输入" autocomplete="off" class="layui-input" id="username">
                                         </div>
                                     </div>
 
@@ -71,7 +69,7 @@
                                 </div>
                                 <div class="layui-form-item">
                                     <div class="layui-input-block" style="text-align: right;">
-                                        <button class="layui-btn" lay-submit lay-filter="formDemo" id="po">提交</button>
+                                        <button  class="layui-btn" lay-submit  lay-filter="*" id="po">提交</button>
                                     </div>
                                 </div>
                             </form>
@@ -90,140 +88,154 @@
         <div id="demo" style="text-align: center;"></div>
     </div>
 </div>
-<script type="text/javascript" src="../res/layui/layui.js"></script>
 <script type="text/javascript">
-    layui.config({
-        base: '../res/js/util/'
-    }).use(['element', 'laypage', 'jquery', 'menu'], function () {
-        element = layui.element, laypage = layui.laypage, $ = layui.$, menu = layui.menu;
-        laypage.render({
-            elem: 'demo'
-            , count: 70 //数据总数，从服务端得到
-        });
-        menu.init();
-    })
+
 </script>
 <script type="text/javascript">
-    /*--------显示评论------------------------------------------------------------------------------------------------------------------*/
-    function showComment() {
-        /*Resource interpreted as Document but transferred with MIME type application/json*/
-        var url = "../comment/show";
-        $.ajax({
-            "url": url,
-            "type": "post",
-            "dataType": "json",
-            /*"processData": false,*/
-            "success": function (json) {
-                console.log("json.status=" + json.status);
-                if (json.status == 200) {
-                    var data = json.data;
-                    $("#comment").empty();
-                    var html = "";
-                    for (var i = 0; i < data.length; i++) {
-                        var element = data[i];
-                        var name = element.username;
-                        var com = element.comment;
-                        //var time=element.createTime;
-                        var time = renderTime(element.createTime);
-                        var temp = '<div class="cont"><div class="img"> <img src="../res/img/header.png" alt=""> </div> <div class="text"> <p class="tit">'
-                            + '<span class="name">用户名：' + name + '</span><span class="data">' + time + '</span></p> <p class="ct">'
-                            + com + '</p></div></div>';
-                        html = html + temp;
-                    }
-                    $("#list-comment").append(html);
-                } else if (json.status == 402) {
-                    alert("修改失败！" + json.message);
-                } else {
-                    alert("莫名其妙！！！");
-                }
-            },
-            "error": function (xhr, textStatus, errorThrown) {
-                // xhr：XMLHttpRequest类型的对象
-                // - responseText：响应的文本
-                // - readyState：状态，值为0~4
-                // - status：响应码
-                console.log("状态码：" + xhr.readyState);
-                console.log("响应码：" + xhr.status);
-                console.log("响应文本：" + xhr.responseText);
-                console.log("textStatus=" + textStatus);
-                console.log("errorThrown=" + errorThrown);
-            }
-        });
 
-
-    }
-
-    showComment();
-    /*--点击提交事件------------------------------------------------------------------------------------------------------------------------*/
-    var a=0;
-
-    $('#po').click(function () {
-
-
-        if (a=1)return;
-
-        var url = "../comment/post";
-        var _comment = $("#inputcommon").val();
-        var _uid = $("#username").val();
-        var data = {comment: _comment, uid: _uid};
-        $.ajax({
-            "url": url,
-            "data": data,
-            "type": "post",
-            "dataType": "json",
-            "contentType": "application/x-www-form-urlencoded; charset=utf-8",
-            /*"processData": false,*/
-            "success": function (json) {
-                alert(json.status);
-                if (json.status == 200) {
-                    alert("添加成功！" + json.data);
-                    showComment();
-                } else if (json.status == 402) {
-                    alert("修改失败！" + json.message);
-                } else {
-                    alert("莫名其妙！！！");
-                }
-            }
-        });
-    });
-
-    function renderTime(date) {
-        var dateee = new Date(date).toJSON();
-        return new Date(+new Date(dateee) + 8 * 3600 * 1000).toISOString().replace(/T/g, ' ').replace(/\.[\d]{3}Z/, '')
-    }
     /*--点击提交事件------------------------------------------------------------------------------------------------------------------------*/
 
-    layui.use('form', function () {
-        var form=layui.form;
+    layui.config({
+        base: '../res/js/util/'
+    }).use(['layer','form','jquery','menu'],function () {
+        var form=layui.form,
+               $=layui.jquery,
+          layer = layui.layer,
+            menu = layui.menu,
+            laypage = layui.laypage;
+        layer.msg('Hello World');
+        form.render();
         form.verify({
-
-            username: function(value){
-
-                if(value.length<5){
-                    a = 1;
-                    return 'too short';
+            username: function(value) {
+                if (value.length < 1) {
+                    alert("too short")
+                    return '名字太duan';
                 }
-
-                if(!new RegExp("^[a-zA-Z0-9_\u4e00-\u9fa5\\s·]+$").test(value)){
-                    console.log("in");
-                    a = 1;
-                    return '用户名不能有特殊字符';
+                 if (value.length > 7) {
+                    alert("too long")
+                    return '名字太长了';
                 }
-                if(/(^\_)|(\__)|(\_+$)/.test(value)){
+                 if (/(^\_)|(\__)|(\_+$)/.test(value)) {
                     console.log("in");
-                    a = 1;
+                     alert("用户名首尾不能出现下划线")
                     return '用户名首尾不能出现下划线\'_\'';
                 }
-                if(/^\d+\d+\d$/.test(value)){
+                if (/^\d+\d+\d$/.test(value)){
                     console.log("in");
-                    a = 1;
+                    alert("用户名不能全为数字");
                     return '用户名不能全为数字';
                 }
-
             }
+            });
+
+        form.on('submit(*)',function () {
+                    alert("准备验证");
+                    console.log("成功进入了ajax");
+                    var url = "../comment/post";
+                    var _comment = $("#inputcommon").val();
+                    var _uid = $("#username").val();
+                    console.log("进入了ajax"+_uid+_comment);
+                    var data = {comment: _comment, username: _uid};
+                    $.ajax({
+                        "url": url,
+                        "data": data,
+                        "type": "post",
+                        "dataType": "json",
+                        /*"async":false,*/
+                        "contentType": "application/x-www-form-urlencoded; charset=utf-8",
+                        /*"processData": false,*/
+                        "success": function (json) {
+                            alert(json.status);
+                            if (json.status == 200) {
+                                alert(json);
+                                alert(json.msg);
+                                alert("添加成功！" + json.data);/*这里没有data*/
+                                alert("stop2");
+                                showComment();
+                            } else if (json.status == 402) {
+                                alert("修改失败！" + json.message);
+                            } else {
+                                alert("莫名其妙！！！");
+                            }
+                        }
+                    });
+
+            alert("stop1");
+
+            return false;/*提交表单后不跳转*/
         });
 
+
+        menu.init();
+
+        /*--------显示评论------------------------------------------------------------------------------------------------------------------*/
+        function showComment() {
+            /*Resource interpreted as Document but transferred with MIME type application/json*/
+            var url = "../comment/show";
+            alert("准备显示评论");
+            $.ajax({
+                "url": url,
+                "type": "post",
+                "dataType": "json",
+                /*"processData": false,*/
+                "success": function (json) {
+                    console.log("json.status=" + json.status);
+                    if (json.status == 200) {
+                        var data = json.data;
+                        $("#comment").empty();
+                        alert("清除显示，二次加载的脚本不会执行");
+                        var html = "";
+                        for (var i = 0; i < data.length; i++) {
+                            var element = data[i];
+                            var name = element.username;
+                            var com = element.comment;
+                            //var time=element.createTime;
+                            var time = renderTime(element.createTime);
+                            var temp = '<div class="cont"><div class="img"> <img src="../res/img/header.png" alt=""> </div> <div class="text"> <p class="tit">'
+                                + '<span class="name">用户名：' + name + '</span><span class="data">' + time + '</span></p> <p class="ct">'
+                                + com + '</p></div></div>';
+                            html = html + temp;
+                        }
+                        $("#list-comment").append(html);
+                        laypage.render({
+                            elem: 'demo'
+                            , count: data.length //数据总数，从服务端得到
+                        });
+                        alert("显示评论完成");
+                    } else if (json.status == 402) {
+                        alert("修改失败！" + json.message);
+                    } else {
+                        alert("莫名其妙！！！");
+                    }
+                },
+                "error": function (xhr, textStatus, errorThrown) {
+                    // xhr：XMLHttpRequest类型的对象
+                    // - responseText：响应的文本
+                    // - readyState：状态，值为0~4
+                    // - status：响应码
+                    console.log("状态码：" + xhr.readyState);
+                    console.log("响应码：" + xhr.status);
+                    console.log("响应文本：" + xhr.responseText);
+                    console.log("textStatus=" + textStatus);
+                    console.log("errorThrown=" + errorThrown);
+                }
+            });
+
+
+        }
+
+        showComment();
+        /*--点击提交事件------------------------------------------------------------------------------------------------------------------------*/
+
+        function renderTime(date) {
+            var dateee = new Date(date).toJSON();
+            return new Date(+new Date(dateee) + 8 * 3600 * 1000).toISOString().replace(/T/g, ' ').replace(/\.[\d]{3}Z/, '')
+        }
     });
+
+
+
+
 </script>
 
 </body>
